# eyewear-detection-pipeline

./: .env.example  .gitignore  DEMO_SCRIPT.md  Dockerfile  INTERVIEW_PREP.md  README.md  dataset_card.md  docker-compose.yml  error_analysis.md  pyproject.toml  requirements-dev.txt  requirements.txt  todo.md
.github/workflows/: ci.yml
docs/: architecture.md
grafana/dashboards/: eyewear-overview.json
grafana/provisioning/dashboards/: dashboards.yml
nginx/: default.conf
prometheus/: prometheus.yml
promtail/: config.yml
reports/: experiment_table.csv  experiment_table_hf.csv
runbooks/: demo.md
scripts/: bootstrap_env.py  calibrate_threshold.py  collect_evidence.py  create_synthetic_dataset.py  prepare_celeba_eyeglasses.py  prepare_celeba_torchvision.py  prepare_data.py  prepare_demo_data.py  prepare_hf_celeba_eyeglasses.py  promote_model.py  register_model.py  run_experiments.py  smoke_check.py  train_smoke.py
src/eyewear_pipeline/: __init__.py  baseline.py  calibration.py  config.py  data.py  evaluate.py  face.py  inference.py  metrics.py  mlops.py  predict_image.py  predict_video.py  torch_model.py  train.py
src/eyewear_pipeline/api/: __init__.py  main.py  observability.py  runtime.py
tests/: conftest.py  test_api.py  test_calibration.py  test_data.py  test_inference.py
