[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyewear-detection-pipeline"
version = "0.1.0"
description = "End-to-end CV pipeline for face + eyeglasses detection/classification."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "TERIO" }]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"
